# feedmail

./: .gitignore  README.md  example_config.json  pyproject.toml  pytest.ini
feedmail/: __init__.py  cli.py  db.py  main.py
feedmail/database/: db_setup.py
feedmail/lib/: cli.py  feedreader.py  jmap_client.py
tests/: cli_test.py
