[tool.poetry]
name = "feedmail"
version = "0.1.0"
description = ""
authors = ["Rasha Moumneh <rasha@fastmailteam.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
sqlalchemy = "^2.0.30"
greenlet = "^3.0.3"
pytest = "^8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
